App Structure (Tabs)

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Accueil
+      Paramètres
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
 
 </ion-content>
