--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,5 +7,9 @@
 </ion-header>
 
 <ion-content>
+<ion-item>
+  <ion-label>Start Time</ion-label>
+  <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" [(ngModel)]="event.timeStarts"></ion-datetime>
+</ion-item>
 
 </ion-content>
