Home page Euro/Add buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Accueil
-    </ion-title>
+    <div class="home-buttons">
+      <button ion-button clear large color="primary">
+        <ion-icon name="logo-euro"></ion-icon>
+      </button>
+
+      <button ion-button clear large color="primary">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </div>
   </ion-navbar>
 </ion-header>
 
