--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs selectedIndex="1">
-  <ion-tab [root]="tab1Root" tabTitle="Alarm" tabIcon="alarm"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Alarmes" tabIcon="alarm"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Accueil" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Paramètres" tabIcon="settings"></ion-tab>
 </ion-tabs>
