--- a/src/pages/alarm/alarm.html
+++ b/src/pages/alarm/alarm.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Alarme</ion-title>
+    <ion-title>Alarmes</ion-title>
   </ion-navbar>
 </ion-header>
 
