--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,30 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Accueil
-    </ion-title>
+    <div class="home-buttons">
+      <button ion-button clear color="primary">
+        <ion-icon name="logo-euro"></ion-icon>
+      </button>
+
+      <button ion-button clear color="primary">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </div>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <div class="hour" text-center>
+    13:00
+  </div>
+
+  <div class="hour-button" text-center>
+    <button ion-button clear>
+      <ion-icon name="time"> 10:00</ion-icon>
+    </button>
+  </div>
+
+  <div class="line"></div>
+
+  <div class="img" text-center><img src="../../assets/imgs/home.jpeg" alt=""></div>
 
 </ion-content>
