--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
-<ion-header>
+<ion-header no-shadow no-border>
   <ion-navbar>
     <div class="home-buttons">
       <button ion-button clear color="primary">
         <ion-icon name="logo-euro"></ion-icon>
       </button>
 
-      <button ion-button clear color="primary">
+      <button ion-button clear color="primary" (click)="navigateToAnotherModule('AlarmSetPage')">
         <ion-icon name="add"></ion-icon>
       </button>
     </div>
